--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     url: jdbc:mariadb://localhost:3306/security?serverTimezone=Asia/Seoul
     username: dong
     password: 1234
+  devtools:
+    remote:
+      restart:
+        enabled: true
 #
 #  mvc:
 #    view:
