--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,14 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: "449795455288-inr0o3r4hncmif7ehe2uk215ji8vgt4a.apps.googleusercontent.com"
+            client-secret: "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"
+            scope:
+              - email
+              - profile
