--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,22 @@ spring:
             scope:
               - email
               - public_profile
+          # google, facebook은 공식 provider라서 간단.
+          naver:
+            client-id: "aOXHiY5aPEWeqSQaWeaO"
+            client-secret: "eH_7tG5Twx"
+            scope:
+              - name
+              - email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize # 네이버 로그인 인증 요청
+            token-uri: https://nid.naver.com/oauth2.0/token # 갱신토큰을 이용한 접근토큰 재발급 요청
+            user-info-uri: https://openapi.naver.com/v1/nid/me # 프로필 정보 조회
+            user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
+
+
